examples/lexer/bad/08_missing_function_body.sg
// Ошибка: отсутствует тело функции
fn test_empty() -> int {
    // пустое тело функции без return
}

fn test_incomplete() -> int {
    let x:int = 42;
    // функция не завершена
